--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,9 +8,6 @@ bodyClass: "page-home"
     <div class="row justify-content-start">
       <div class="col-12 col-md-7 col-lg-6 order-2 order-md-1">
         {{ content }}
-        {% if page.show_call_box %}
-          {% include call.html show_button=true %}
-        {% endif %}
       </div>
       {% if page.intro_image %}
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
@@ -24,7 +21,7 @@ bodyClass: "page-home"
 <div class="strip">
   <div class="container pt-6 pb-6 pb-md-10">
     <div class="row justify-content-start">
-      {% assign limit = site.home.limit_services | default: 6 %}
+      {% assign limit = site.home.limit_services | default: 12 %}
       {% for service in site.services limit: limit %}
       <div class="col-12 col-md-4 mb-1">
         <div class="service service-summary">
@@ -38,11 +35,11 @@ bodyClass: "page-home"
       </div>
       {% endfor %}
     </div>
-    <div class="row justify-content-center">
+    <!-- <div class="row justify-content-center">
       <div class="col-auto">
         <a class="button button-primary" href="{{ "services" | relative_url }}">View All Services</a>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
