--- a/_sass/components/_main-menu.scss
+++ b/_sass/components/_main-menu.scss
@@ -9,7 +9,8 @@
     justify-content: flex-start;
     > li {
       list-style: none;
-      font-size: 1rem;
+      font-size: 1.5rem;
+      font-family: sans-serif;
       > a {
         padding: 10px 12px 10px 12px;
         display: inline-block;
