--- a/_sass/components/_news.scss
+++ b/_sass/components/_news.scss
@@ -1,26 +1,26 @@
-.intro {
+.news {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding-top: 140px;
-  padding-bottom: 140px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   overflow: hidden;
   @include media-breakpoint-up(md) {
-    padding-top: 140px;
-    padding-bottom: 40px;
+    padding-top: 20px;
+    padding-bottom: 200px;
   }
   h1 {
     color: $black;
     font-size: 42px;
     font-weight: bold;
     line-height: 1.2;
-    @include media-breakpoint-up(md) {
-      width: 80%;
-      font-size: 48px;
-    }
-    @include media-breakpoint-up(lg) {
-      font-size: 50px;
-    }
+    // @include media-breakpoint-up(md) {
+    //   width: 80%;
+    //   font-size: 48px;
+    // }
+    // @include media-breakpoint-up(lg) {
+    //   font-size: 50px;
+    // }
   }
   h2 {
     width: 80%;
@@ -41,7 +41,7 @@
   }
 }
 
-.intro-small {
+.news-small {
   padding-top: 100px;
   padding-bottom: 30px;
 }
