--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@ bodyClass: "page-home"
 
 <div class="news">
 <div class="container pt-6 pb-6">
-  <h1 class="title">Latest announcements</h1>
+  <h1 class="title">Highlighted seminars</h1>
   <div class="row">
       {% assign promoted_seminars = site.seminar | where: "promoted", true | sort: "date" %}
       {% for seminar in promoted_seminars %}
