--- a/_layouts/seminars.html
+++ b/_layouts/seminars.html
@@ -3,10 +3,14 @@ layout: default
 bodyClass: "page-seminars"
 ---
 
+{% assign today_date = 'now' | date: '%Y%m%d' | times: 1 %}
+{% assign seminars = site.seminar %}
+
 <div class="container pt-6 pb-6">
     <div class="row">
-        {% assign promoted_seminars = site.seminar | where: "promoted", true | sort: "date" %}
-        {% for seminar in promoted_seminars %}
+        {% for seminar in seminars %}
+        {% assign seminar_date = seminar.date | date: '%Y%m%d' | times: 1 %}
+        {% if today_date <= seminar_date %}
         <div class="col-12 col-md-6 mb-2">
             <div class="seminar seminar-summary seminar-summary-large">
                 {% if seminar.image %}
@@ -15,6 +19,7 @@ bodyClass: "page-seminars"
                 </div>
                 {% endif %}
                 <div class="seminar-meta">
+                    <!-- <h1 class="seminar-name"><a>Upcoming seminar</a></h1> -->
                     <h2 class="seminar-name"><a href="{{ seminar.url | relative_url }}">{{ seminar.title }}</a></h2>
                     <p class="seminar-description">{{ seminar.date | date: '%d %B %Y' }}</p>
                     {% if seminar.venue %}
@@ -25,10 +30,11 @@ bodyClass: "page-seminars"
                 {% if seminar.identifier %}
                 <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{seminar.identifier}}/select?color=%230eafee">Register for the seminar</a>        <!-- <h3 class="content"><a class="content" target="_blank" href="{{ page.registrationurl }}" rel="noreferrer">Register here!</a></h3> -->
                 {% else %}
-                <h3 class="content">Not open for registration</h3>
+                <h3 class="content">Not yet open for registration</h3>
                 {% endif %}
             </div>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
     <div class="row pt-6 pb-6">
