--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -59,6 +59,7 @@ $sub-footer-text-color: $white;
 // Pages
 @import "pages/page-home";
 @import "pages/page-seminars";
+@import "pages/page-news";
 
 body {
   font-size: 22px;
