--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,9 +23,9 @@ bodyClass: "page-home"
 </div>
 
 <div class="container pt-6 pb-6">
-  <h1 class="title">Latest News</h1>
+  <h2 class="title">Latest News</h1>
   <div class="row">
-    {% for newsupdate in news %}
+    {% for newsupdate in news reversed %}
     {% assign newsupdate_date = newsupdate.date | date: '%Y%m%d' | times: 1 %}
     <div class="col-12 col-md-6 mb-2">
         <div class="newsupdate newsupdate-summary newsupdate-summary-large">
@@ -49,7 +49,7 @@ bodyClass: "page-home"
 </div>
 
 <div class="container pt-6 pb-6">
-  <h1 class="title">Highlighted seminars</h1>
+  <h2 class="title">Highlighted seminars</h1>
   <div class="row">
     {% for seminar in seminars %}
     {% assign seminar_date = seminar.date | date: '%Y%m%d' | times: 1 %}
