Change formatting of dates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@ bodyClass: "page-home"
             {% endif %}
             <div class="newsupdate-meta">
                 <h2 class="newsupdate-name"><a href="{{ newsupdate.url | relative_url }}">{{ newsupdate.title }}</a></h2>
-                <p class="newsupdate-description">{{ newsupdate.date | date: '%d %B %Y' }}</p>
+                <p class="newsupdate-description">{{ newsupdate.date | date: '%d' | plus:'0'}} {{ newsupdate.date | date: '%B %Y' }}</p>
                 {% if newsupdate.venue %}
                 <a target="_blank" href="{{ newsupdate.googleurl }}" rel="noreferrer">{{ newsupdate.venue }}</a>
                 {% endif %}
@@ -63,7 +63,7 @@ bodyClass: "page-home"
             {% endif %}
             <div class="seminar-meta">
                 <h2 class="seminar-name"><a href="{{ seminar.url | relative_url }}">{{ seminar.title }}</a></h2>
-                <p class="seminar-description">{{ seminar.date | date: '%d %B %Y' }}</p>
+                <p class="seminar-description">{{ seminar.date | date: '%d' | plus:'0'}} {{ seminar.date | date: '%B %Y' }}</p>
                 {% if seminar.venue %}
                 <a target="_blank" href="{{ seminar.googleurl }}" rel="noreferrer">{{ seminar.venue }}</a>
                 {% endif %}
