--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,25 +28,26 @@ bodyClass: "page-home"
     {% for newsupdate in news reversed %}
     {% assign newsupdate_date = newsupdate.date | date: '%Y%m%d' | times: 1 %}
     <div class="col-12 col-md-6 mb-2">
-        <div class="newsupdate newsupdate-summary newsupdate-summary-large">
+        <div class="news news-summary news-summary-large">
             {% if newsupdate.image %}
-            <div class="newsupdate-image">
-                <img width="550" height="367" alt="{{ newsupdate.title }}" class="img-fluid mb-2 intro-image-hide-mobile" src="{{ newsupdate.image | relative_url }}" />
+            <div class="news-image">
+                <img alt="{{ newsupdate.title }}" class="img-fluid mb-2" src="{{ newsupdate.image | relative_url }}" />
             </div>
             {% endif %}
-            <div class="newsupdate-meta">
-                <h2 class="newsupdate-name"><a href="{{ newsupdate.url | relative_url }}">{{ newsupdate.title }}</a></h2>
-                <p class="newsupdate-description">{{ newsupdate.date | date: '%d' | plus:'0'}} {{ newsupdate.date | date: '%B %Y' }}</p>
+            <div class="news-meta">
+                <h2 class="news-name"><a href="{{ newsupdate.url | relative_url }}">{{ newsupdate.title }}</a></h2>
+                <p class="news-description">{{ newsupdate.date | date: '%d' | plus:'0'}} {{ newsupdate.date | date: '%B %Y' }}</p>
                 {% if newsupdate.venue %}
                 <a target="_blank" href="{{ newsupdate.googleurl }}" rel="noreferrer">{{ newsupdate.venue }}</a>
                 {% endif %}
             </div>
-            <div class="newsupdate-content">{{ newsupdate.content | truncate: 250 }}</div>
+            <div class="news-content">{{ newsupdate.content | truncate: 250 }}</div>
+            <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="{{newsupdate.url}}">Read more</a>
         </div>
     </div>
     {% endfor %}
   </div>
-
+  <br>
   <h1 class="title">Upcoming seminars</h1>
   <div class="row">
     {% for seminar in seminars %}
@@ -68,7 +69,7 @@ bodyClass: "page-home"
             </div>
             <div class="seminar-content">{{ seminar.content | truncate: 250 }}</div>
             {% if seminar.identifier %}
-            <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{seminar.identifier}}/select?color=%230eafee">Register for the seminar</a>        <!-- <h3 class="content"><a class="content" target="_blank" href="{{ page.registrationurl }}" rel="noreferrer">Register here!</a></h3> -->
+            <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{seminar.identifier}}/select?color=%230eafee">Register for the seminar</a>
             {% else %}
             <h3 class="content">Not yet open for registration</h3>
             {% endif %}
