--- a/_sass/pages/_page-home.scss
+++ b/_sass/pages/_page-home.scss
@@ -1,2 +1,102 @@
 .page-home {
+    .seminar-summary {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        .seminar-image {
+          height: 60px;
+          width: 60px;
+          margin-right: 10px;
+          border-radius: 50%;
+          overflow: hidden;
+          img {
+            width: 60px;
+          }
+        }
+        .seminar-meta {
+          flex: 1;
+          h2 {
+            margin: 0;
+            font-size: 24px;
+            font-weight: normal;
+          }
+          p {
+            color: $black;
+            text-transform: uppercase;
+            margin: 0;
+            font-size: 14px;
+            font-weight: normal;
+          }
+        }
+        .seminar-content {
+          margin-top: 20px;
+          flex: 1 0 100%;
+        }
+      }
+    
+      .seminar-summary-large {
+        background-color: $white-offset;
+        padding: 30px;
+        border-radius: 3px;
+        .seminar-image {
+          height: 200px;
+          width: 200px;
+          margin-right: 20px;
+          border-radius: 50%;
+          overflow: hidden;
+          img {
+            width: 200px;
+          }
+        }
+      }
+
+      .news-summary {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        // .news-image {
+        //   height: 60px;
+        //   width: 60px;
+        //   margin-right: 10px;
+        //   border-radius: 50%;
+        //   overflow: hidden;
+        //   img {
+        //     width: 60px;
+        //   }
+        // }
+        .news-meta {
+          flex: 1;
+          h2 {
+            margin: 0;
+            font-size: 24px;
+            font-weight: normal;
+          }
+          p {
+            color: $black;
+            text-transform: uppercase;
+            margin: 0;
+            font-size: 14px;
+            font-weight: normal;
+          }
+        }
+        .news-content {
+          margin-top: 20px;
+          flex: 1 0 100%;
+        }
+      }
+    
+      .news-summary-large {
+        padding: 0px;
+        border-radius: 3px;
+        .news-image {
+          height: 200px;
+          width: 300px;
+          margin-right: 20px;
+          //border-radius: 50%;
+          overflow: hidden;
+          img {
+            width: 300px;
+          }
+        }
+      }
 }
