--- a/_layouts/newsupdate.html
+++ b/_layouts/newsupdate.html
@@ -10,7 +10,7 @@ layout: default
     <div class="col-12 col-md-8">
       <div class="seminar seminar-single">
         <h1 class="title">{{page.title}}</h1>
-        <h3 class="content">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date | date: '%d' | plus:'0'}} {{ page.date | date: '%B %Y' }}</h3>
+        <h3 class="content">{{ page.date | date: '%d' | plus:'0'}} {{ page.date | date: '%B %Y' }}</h3>
         {% if page.image %}
         <div class="newsupdate-image">
             <img width="600" alt="{{ page.title }}" class="img-fluid mb-2" src="{{ page.image | relative_url }}" />
