--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,7 +90,9 @@ bodyClass: "page-home"
             <h2 class="infopage-title">
               <a href="{{ infopage.url | relative_url }}">{{ infopage.title }}</a>
             </h2>
-            <p>{{ infopage.content | markdownify | strip_html | truncate: 100 }}</p>
+            {% if infopage.teaser %}
+            <p>{{ infopage.teaser | markdownify | strip_html | truncate: 200 }}</p>
+            {% endif %}
           </div>
         </div>
       </div>
@@ -102,8 +104,8 @@ bodyClass: "page-home"
 {% if site.data.features %}
 <div class="strip strip-grey">
   <div class="container pt-6 pb-6 pt-md-10 pb-md-10">
+    <h1 class="row justify-content-center">DANSIS Sponsors</h1>
     <div class="row justify-content-center">
-
       {% for feature in site.data.features %}
       <div class="col-12 col-md-6 col-lg-4 mb-2">
         <div class="feature">
