--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -12,6 +12,9 @@ layout: default
         <h1 class="title">{{page.title}}</h1>
         <h3 class="content">Venue:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="{{page.googleurl}}" rel="noreferrer">{{page.venue}}</a></h3>
         <h3 class="content">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date | date: '%d' | plus:'0'}} {{ page.date | date: '%B %Y' }}</h3>
+        {% if page.filelink and today_date > seminar_date%%}
+        <h3 class="content">Files:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="{{page.filelink}}" rel="noreferrer">Browse presentation slides</a></h3>
+        {% endif %}
         <div class="content">{{content}}</div>
         {% if page.identifier and today_date <= seminar_date%}
         <script src="https://billetto.dk/embed.js" data-locale="en"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{page.identifier}}/select?color=%230eafee" data-locale="en">Register for the seminar</a>
