--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ bodyClass: "page-home"
       </div>
       {% if page.intro_image %}
       <div class="col-12 col-md-5 col-lg-6 order-1 order-md-2 position-relative">
-        <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relURL }}" />
+        <img alt="{{ page.title }}" class="intro-image{% if page.intro_image_absolute %} intro-image-absolute{% endif %}{% if page.intro_image_hide_on_mobile %} intro-image-hide-mobile{% endif %}" src="{{ page.intro_image | relURL }}">
       </div>
       {% endif %}
     </div>
@@ -24,6 +24,42 @@ bodyClass: "page-home"
 
 
 <div class="container pt-6 pb-6">
+  {% if upcoming_seminars.size != 0%}
+    <h1 class="title">Upcoming seminars</h1>
+  {% endif %}
+  <div class="row">
+    {% for upcoming_seminar in upcoming_seminars %}
+    <div class="col-12 col-md-6 mb-2">
+        <div class="seminar seminar-summary seminar-summary-large">
+            {% if upcoming_seminar.image %}
+            <a href="{{ upcoming_seminar.url | relative_url }}">
+            <div class="seminar-image">
+                <img width="200" height="200" alt="{{ upcoming_seminar.title }}" class="img-fluid mb-2" src="{{ upcoming_seminar.image | relative_url }}" />
+            </div>
+            </a>
+            {% endif %}
+            <a href="{{ upcoming_seminar.url | relative_url }}">
+              <div class="seminar-meta">
+                  <h2 class="seminar-name">{{ upcoming_seminar.title }}</h2>
+                  <p class="seminar-description">
+                    {{ upcoming_seminar.date | date: '%d' | plus:'0'}} {{ upcoming_seminar.date | date: '%B %Y' }}
+                  </p>
+                  {% if upcoming_seminar.venue %}
+                  {{ upcoming_seminar.venue }}
+                  {% endif %}
+              </div>
+            </a>
+            <div class="seminar-content">{{ upcoming_seminar.content | truncate: 250 }}</div>
+            {% if upcoming_seminar.identifier %}
+            <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{ upcoming_seminar.identifier }}/select?color=%230eafee">Register for the seminar</a>
+            {% else %}
+            <h3 class="content">Not yet open for registration</h3>
+            {% endif %}
+        </div>
+    </div>
+    {% endfor %}
+  </div>
+  <br>
   {% if news.size != 0%}
     <h1 class="title">Latest News</h1>
   {% endif %}
@@ -45,36 +81,6 @@ bodyClass: "page-home"
             </div>
             <div class="news-content">{{ newsupdate.content | truncate: 250 }}</div>
             <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="{{ newsupdate.url | relative_url }}">Read more</a>
-        </div>
-    </div>
-    {% endfor %}
-  </div>
-  <br>
-  {% if upcoming_seminars.size != 0%}
-    <h1 class="title">Upcoming seminars</h1>
-  {% endif %}
-  <div class="row">
-    {% for upcoming_seminar in upcoming_seminars %}
-    <div class="col-12 col-md-6 mb-2">
-        <div class="seminar seminar-summary seminar-summary-large">
-            {% if upcoming_seminar.image %}
-            <div class="seminar-image">
-                <img width="200" height="200" alt="{{ upcoming_seminar.title }}" class="img-fluid mb-2" src="{{ upcoming_seminar.image | relative_url }}" />
-            </div>
-            {% endif %}
-            <div class="seminar-meta">
-                <h2 class="seminar-name"><a href="{{ upcoming_seminar.url | relative_url }}">{{ upcoming_seminar.title }}</a></h2>
-                <p class="seminar-description">{{ upcoming_seminar.date | date: '%d' | plus:'0'}} {{ upcoming_seminar.date | date: '%B %Y' }}</p>
-                {% if upcoming_seminar.venue %}
-                <a target="_blank" href="{{ upcoming_seminar.googleurl }}" rel="noreferrer">{{ upcoming_seminar.venue }}</a>
-                {% endif %}
-            </div>
-            <div class="seminar-content">{{ upcoming_seminar.content | truncate: 250 }}</div>
-            {% if upcoming_seminar.identifier %}
-            <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{ upcoming_seminar.identifier }}/select?color=%230eafee">Register for the seminar</a>
-            {% else %}
-            <h3 class="content">Not yet open for registration</h3>
-            {% endif %}
         </div>
     </div>
     {% endfor %}
