--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -10,6 +10,9 @@ layout: default
     <div class="col-12 col-md-8">
       <div class="seminar seminar-single">
         <h1 class="title">{{page.title}}</h1>
+        <div class="seminar-image">
+          <img height="400" alt="{{ page.title }}" class="img-fluid mb-2" src="{{ page.image | relative_url }}" />
+        </div>
         <h3 class="content">Venue:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="{{page.googleurl}}" rel="noreferrer">{{page.venue}}</a></h3>
         <h3 class="content">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date | date: '%d' | plus:'0'}} {{ page.date | date: '%B %Y' }}</h3>
         {% if page.filelink and today_date > seminar_date%%}
