--- a/_layouts/seminars.html
+++ b/_layouts/seminars.html
@@ -14,17 +14,23 @@ bodyClass: "page-seminars"
         <div class="col-12 col-md-6 mb-2">
             <div class="seminar seminar-summary seminar-summary-large">
                 {% if seminar.image %}
+                <a href="{{ seminar.url | relative_url }}">
                 <div class="seminar-image">
                     <img width="200" height="200" alt="{{ seminar.title }}" class="img-fluid mb-2" src="{{ seminar.image | relative_url }}" />
                 </div>
+                </a>
                 {% endif %}
-                <div class="seminar-meta">
-                    <h2 class="seminar-name"><a href="{{ seminar.url | relative_url }}">{{ seminar.title }}</a></h2>
-                    <p class="seminar-description">{{ seminar.date | date: '%d' | plus:'0'}} {{ seminar.date | date: '%B %Y' }}</p>
-                    {% if seminar.venue %}
-                    <a target="_blank" href="{{ seminar.googleurl }}" rel="noreferrer">{{ seminar.venue }}</a>
-                    {% endif %}
-                </div>
+                <a href="{{ seminar.url | relative_url }}">
+                    <div class="seminar-meta">
+                        <h2 class="seminar-name">{{ seminar.title }}</h2>
+                        <p class="seminar-description">
+                          {{ seminar.date | date: '%d' | plus:'0'}} {{ seminar.date | date: '%B %Y' }}
+                        </p>
+                        {% if seminar.venue %}
+                        {{ seminar.venue }}
+                        {% endif %}
+                    </div>
+                  </a>
                 <div class="seminar-content">{{ seminar.content | truncate: 250 }}</div>
                 {% if seminar.identifier %}
                 <script src="https://billetto.dk/embed.js"></script><style>.billetto-btn { line-height: 1.75rem; position: relative; display: inline-block; font-weight: 400; white-space: nowrap; text-align: center; background-image: none; border: 1px solid transparent; cursor: pointer; user-select: none; touch-action: manipulation; height: 32px; padding: 1px 15px; font-size: 16px; border-radius: 6px; color: #1b1d1e; background: #0eafee; border-color: #0eafee; text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12); box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045); text-decoration: none; } .billetto-btn:hover, .billetto-btn:focus, .billetto-btn:active { text-decoration: none; outline: 0; box-shadow: none; color: #1b1d1e;} .billetto-btn[disabled] { cursor: not-allowed; } .billetto-btn[disabled], .billetto-btn[disabled]:hover, .billetto-btn[disabled]:focus, .billetto-btn[disabled]:active { color: rgba(0, 0, 0, 0.25); background: #ffffff; border-color: #d9d9d9; text-shadow: none; box-shadow: none; }</style><a class="billetto-btn" href="https://billetto.dk/e/{{seminar.identifier}}/select?color=%230eafee">Register for the seminar</a>        <!-- <h3 class="content"><a class="content" target="_blank" href="{{ page.registrationurl }}" rel="noreferrer">Register here!</a></h3> -->
