--- a/_layouts/seminar.html
+++ b/_layouts/seminar.html
@@ -11,7 +11,7 @@ layout: default
       <div class="seminar seminar-single">
         <h1 class="title">{{page.title}}</h1>
         <div class="seminar-image">
-          <img height="400" alt="{{ page.title }}" class="img-fluid mb-2" src="{{ page.image | relative_url }}" />
+          <img height="400" alt="{{ page.title }}" class="img-fluid mb-2 intro-image-hide-mobile" src="{{ page.image | relative_url }}" />
         </div>
         <h3 class="content">Venue:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" href="{{page.googleurl}}" rel="noreferrer">{{page.venue}}</a></h3>
         <h3 class="content">Date:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ page.date | date: '%d' | plus:'0'}} {{ page.date | date: '%B %Y' }}</h3>
