--- a/_sass/libraries/hamburgers/_base.scss
+++ b/_sass/libraries/hamburgers/_base.scss
@@ -1,5 +1,14 @@
 // Hamburger
 // ==================================================
+html {
+  overflow:   scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+
 .hamburger {
   padding: $hamburger-padding-y $hamburger-padding-x;
   display: inline-block;
